tests/ui/derives/copy-drop-mutually-exclusive.stderr
error[E0184]: the trait `Copy` cannot be implemented for this type; the type has a destructor
  --> $DIR/copy-drop-mutually-exclusive.rs:4:8
   |
LL | #[derive(Copy, Clone)]
   |          ---- in this derive macro expansion
LL | struct Foo;
   |        ^^^ `Copy` not allowed on types with destructors

error[E0184]: the trait `Copy` cannot be implemented for this type; the type has a destructor
  --> $DIR/copy-drop-mutually-exclusive.rs:11:8
   |
LL | #[derive(Copy, Clone)]
   |          ---- in this derive macro expansion
LL | struct Bar<T>(::std::marker::PhantomData<T>);
   |        ^^^ `Copy` not allowed on types with destructors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0184`.
